--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "point-in-polygon": "^1.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "point-in-polygon": "^1.0.1"
   }
 }
